# Passive-Talismans-Elden-Ring

./: LICENSE
passive/: Cargo.toml
passive/src/: lib.rs  log.txt  talisman.rs
