[package]
name = "passive"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
fromsoftware-shared.workspace = true
eldenring.workspace = true
once_cell = "1.21.3"
serde = "1.0.228"
async-std = "1.13.2"

[lib]
crate-type = ["cdylib"]
